--- a/views/pages/sport/index.html
+++ b/views/pages/sport/index.html
@@ -1,38 +1,36 @@
-<div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black w3-margin" style="overflow-x:auto; width:50%;">
+<div class="w3-center w3-padding">
+    <a href="<%= baseUrl %>/sport/new">Add New
+        Sport</a>
+</div>
 
-    <div>
-        <h2>Sports</h2>
-        <a class="w3-btn w3-white w3-padding-small" href="<%= baseUrl %>/sport/new">Add New
-            Sport</a>
-    </div>
-
-    <table class="w3-table" id="sportTable">
+<div style="width: 70%; padding-left: 30%;">
+    <table class="w3-table-all w3-card" id="sportTable">
         <thead>
             <tr>
-                <th class="w3-center">Sport</th>
+                <th class="w3-left w3-margin-left">Sport</th>
                 <th class="w3-center">Discontinued</th>
             </tr>
         </thead>
 
         <% let count = 0; %>
         <% if (records) {
-                records.forEach(function(sport) { 
-                    count++; 
-            %>
+            records.forEach(function(sport) { 
+                count++; 
+        %>
         <tbody>
             <tr>
-                <td class="w3-center">
+                <td class="w3-left w3-margin-left">
                     <%= sport.name %>
                 </td>
                 <td>
                     <form class="w3-center" method="POST" action="<%= baseUrl %>/sport/<%= sport.id %>">
                         <% if (sport.discontinued === "Yes") { %>
                         <input type="hidden" name="discontinued" value="No" />
-                        <button class="w3-red" style="border: none;" type="submit" id="Y<%= count %>"><i class="fa fa-check-square" style="font-size: 150%; color: white"></i></button>
+                        <button style="border: none; background-color: white;" type="submit" id="Y<%= count %>"><i class="fa fa-check-square-o" style="font-size: 150%;"></i></button>
                         <% } else { %>
                         <input type="hidden" name="discontinued" value="Yes" />
-                        <button class="w3-red" style="border: none;" type="submit" id="N<%= count %>">
-                            <i class="fa fa-square" style="font-size: 150%; color:white;"></i></button>
+                        <button style="border: none; background-color: white;" type="submit" id="N<%= count %>">
+                            <i class="fa fa-square-o" style="font-size: 150%;"></i></button>
                         <% } %>
                     </form>
                 </td>
