--- a/views/pages/visit/index.html
+++ b/views/pages/visit/index.html
@@ -1,26 +1,9 @@
-<style>
-    table {
-        border-collapse: collapse;
-        width: 100%;
-    }
-
-    th,
-    td {
-        text-align: left;
-        padding: 8px;
-    }
-
-    tr:nth-child(even) {
-        background-color: #f2f2f2;
-    }
-
-</style>
-
-<div class="w3-center" style="padding-bottom: 18px;">
+<div class="w3-center w3-padding">
     <a href="<%= baseUrl %>/visit/download">Download all visit data</a>
 </div>
-<div class="w3-table-all w3-center" style="overflow:scroll;">
-    <table>
+
+<div style="width: 99%; padding-left: 1%;">
+    <table class="w3-table-all w3-card">
         <thead>
             <tr>
                 <th>#</th>
