Fix banner layout

--- a/views/include/logoutTimer.html
+++ b/views/include/logoutTimer.html
@@ -1,5 +1,4 @@
-<div id="logoutWarning" class="w3-panel w3-yellow w3-display-container" style="display: none;">
+<div id="logoutWarning" class="w3-container w3-display-container w3-yellow" style="display: none; width: 100%">
     <span onclick="setLogoutTimer();" class="w3-button w3-display-topright">&times;</span>
-    <h1>Your Session Is About To Expire</h1>
-    <p>Close this message if you want to continue working.</p>
+    <p class="w3-margin-left">Due to inactivity, you are about to be logged out of the system. Close this message if you want to continue working.</p>
 </div>
