--- a/views/pages/visit/index.html
+++ b/views/pages/visit/index.html
@@ -1,8 +1,8 @@
-<div class="w3-center w3-padding">
+<div class="w3-center w3-padding" style="margin-top: 50px;">
     <a href="<%= baseUrl %>/visit/download">Download all visit data</a>
 </div>
 
-<div style="width: 99%; padding-left: 1%;">
+<div style="width: 99%; padding-left: 1%; padding-bottom: 1%;">
     <table class="w3-table-all w3-card">
         <thead>
             <tr>
