Replace abstract helpers with clear direct code

--- a/views/pages/staff/updateForm.html
+++ b/views/pages/staff/updateForm.html
@@ -19,7 +19,7 @@
         </div>
 
         <div class="w3-padding-16">
-            <button class="w3-btn w3-white" id="submitButton" type="submit">Update</button>
+            <button class="w3-btn w3-white" id="submitButton" type="submit">Submit</button>
         </div>
     </form>
 </div>
