--- a/views/pages/visit/index.html
+++ b/views/pages/visit/index.html
@@ -17,7 +17,12 @@
 
         <tbody>
             <% if (records) {
-            records.forEach(function(visit) { %>
+                let options = {
+                    year: 'numeric', month: '2-digit', day: '2-digit',
+                    hour: 'numeric', minute: 'numeric', second: 'numeric',
+                };
+
+                records.forEach(function(visit) { %>
             <tr>
                 <td>
                     <%= visit.id %>
@@ -26,10 +31,10 @@
                     <%= visit.student.firstName + " " + visit.student.lastName %>
                 </td>
                 <td>
-                    <%= visit.checkInTime %>
+                    <%= new Intl.DateTimeFormat("en-US", options).format(visit.checkInTime) %>
                 </td>
                 <td>
-                    <%= new Date(visit.checkOutTime) %>
+                    <%= visit.checkOutTime ? new Intl.DateTimeFormat("en-US", options).format(visit.checkOutTime) : "" %>
                 </td>
                 <td>
                     <%= visit.length %>
