--- a/views/pages/major/index.html
+++ b/views/pages/major/index.html
@@ -1,9 +1,7 @@
-<div class="w3-center w3-padding">
-    <a href="<%= baseUrl %>/major/new">Add New
-        Major</a>
-</div>
+<a href="<%= baseUrl %>/major/new" class="w3-button" style="color: white; position: fixed; right: 0; z-index: 10;">Add a new
+    Major</a>
 
-<div style="width: 70%; padding-left: 30%;">
+<div style="width: 70%; padding-left: 30%; padding-bottom: 1%; padding-top: 4%;">
     <table class="w3-table-all w3-card" id="majorTable">
         <thead>
             <tr>
