--- a/views/pages/authentication/ldapUnavailable.html
+++ b/views/pages/authentication/ldapUnavailable.html
@@ -1,5 +1,5 @@
 <div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black w3-margin"
     style="width:50%">
-    <h1>Unspecific Server Error</h1>
-    <p>We are having trouble with server connections, please seek support from help@dewv.net. <br> Error 0x20010006</p>
+    <h1>Unable to login users</h1>
+    <p>Users cannot login because this application with the D&E directory server, <br> please contact the D&E college IT staff at helpdesk@dewv.edu</p>
 </div>
