trying disable css

--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -39,7 +39,10 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/nlc_attendance/min/production.min.css">
+   <!--  <link rel="stylesheet" href="/styles/animate-fade-out.css">
+    <link rel="stylesheet" href="/styles/w3-theme-red.css">
+    <link rel="stylesheet" href="/styles/w3.css">
+   -->
     <!--STYLES END-->
 </head>
 
@@ -66,7 +69,7 @@
         <% } %>
 
         <% if (session.role === "student") { %>
-	<%- exposeLocalsToBrowser({ keys: ["baseUrl"] }); -%> 
+	<%- exposeLocalsToBrowser({ keys: ["baseUrl"] }); -%>
         <%- include("../include/logoutTimer.html"); -%>
         <% } %>
 
@@ -83,7 +86,7 @@
             <% if (typeof session.role === "undefined") { %>
         </div>
         <% } %>
-        <% } 
+        <% }
         session.banner = undefined; %>
 
     </div>
@@ -92,11 +95,11 @@
 
     <!-- Client-side Templates
         ========================
-        HTML templates are important prerequisites of modern, rich client applications. To work their magic, frameworks like React, Vue.js, Angular, Ember, and Backbone require that you load these templates client-side. By default, your Gruntfile is configured to automatically load and precompile client-side JST templates in your `assets/templates` folder, then include them here automatically (between TEMPLATES and TEMPLATES END). To customize this behavior to fit your needs, just edit `tasks/pipeline.js`. For example, here are a few things you could do: + Import templates from other directories + Use a different view engine (handlebars, dust, pug/jade, etc.) + Internationalize your client-side templates using a server-side stringfile before they're served. 
+        HTML templates are important prerequisites of modern, rich client applications. To work their magic, frameworks like React, Vue.js, Angular, Ember, and Backbone require that you load these templates client-side. By default, your Gruntfile is configured to automatically load and precompile client-side JST templates in your `assets/templates` folder, then include them here automatically (between TEMPLATES and TEMPLATES END). To customize this behavior to fit your needs, just edit `tasks/pipeline.js`. For example, here are a few things you could do: + Import templates from other directories + Use a different view engine (handlebars, dust, pug/jade, etc.) + Internationalize your client-side templates using a server-side stringfile before they're served.
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
@@ -140,7 +143,8 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/nlc_attendance/min/production.min.js"></script>
+    <script src="/js/logoutTimer.js"></script>
+    <script src="/js/preventMultiSubmit.js"></script>
     <!--SCRIPTS END-->
 
     <% if (typeof session.role !== "undefined" && session.role === "student") { %>
