--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -39,10 +39,9 @@
     -->
 
     <!--STYLES-->
-   <!--  <link rel="stylesheet" href="/styles/animate-fade-out.css">
+    <link rel="stylesheet" href="/styles/animate-fade-out.css">
     <link rel="stylesheet" href="/styles/w3-theme-red.css">
     <link rel="stylesheet" href="/styles/w3.css">
-   -->
     <!--STYLES END-->
 </head>
 
@@ -99,7 +98,7 @@
     -->
 
     <!--TEMPLATES-->
-
+    
     <!--TEMPLATES END-->
 
 
