Basic steps to adding bootstrap

--- a/views/layouts/layout.html
+++ b/views/layouts/layout.html
@@ -1,8 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+<!-- Latest compiled and minified CSS -->
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 
+<!-- jQuery library -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+
+<!-- Popper JS -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.0/umd/popper.min.js"></script>
+
+<!-- Latest compiled JavaScript -->
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>
         Naylor Learning Center
     </title>
@@ -39,7 +50,9 @@
     -->
 
     <!--STYLES-->
-    <link rel="stylesheet" href="/nlc_attendance/min/production.min.css">
+    <!--<link rel="stylesheet" href="/styles/animate-fade-out.css">
+    <link rel="stylesheet" href="/styles/w3-theme-red.css">
+    <link rel="stylesheet" href="/styles/w3.css">-->
     <!--STYLES END-->
 </head>
 
@@ -66,7 +79,7 @@
         <% } %>
 
         <% if (session.role === "student") { %>
-	<%- exposeLocalsToBrowser({ keys: ["baseUrl"] }); -%> 
+	<%- exposeLocalsToBrowser({ keys: ["baseUrl"] }); -%>
         <%- include("../include/logoutTimer.html"); -%>
         <% } %>
 
@@ -83,7 +96,7 @@
             <% if (typeof session.role === "undefined") { %>
         </div>
         <% } %>
-        <% } 
+        <% }
         session.banner = undefined; %>
 
     </div>
@@ -92,11 +105,11 @@
 
     <!-- Client-side Templates
         ========================
-        HTML templates are important prerequisites of modern, rich client applications. To work their magic, frameworks like React, Vue.js, Angular, Ember, and Backbone require that you load these templates client-side. By default, your Gruntfile is configured to automatically load and precompile client-side JST templates in your `assets/templates` folder, then include them here automatically (between TEMPLATES and TEMPLATES END). To customize this behavior to fit your needs, just edit `tasks/pipeline.js`. For example, here are a few things you could do: + Import templates from other directories + Use a different view engine (handlebars, dust, pug/jade, etc.) + Internationalize your client-side templates using a server-side stringfile before they're served. 
+        HTML templates are important prerequisites of modern, rich client applications. To work their magic, frameworks like React, Vue.js, Angular, Ember, and Backbone require that you load these templates client-side. By default, your Gruntfile is configured to automatically load and precompile client-side JST templates in your `assets/templates` folder, then include them here automatically (between TEMPLATES and TEMPLATES END). To customize this behavior to fit your needs, just edit `tasks/pipeline.js`. For example, here are a few things you could do: + Import templates from other directories + Use a different view engine (handlebars, dust, pug/jade, etc.) + Internationalize your client-side templates using a server-side stringfile before they're served.
     -->
 
     <!--TEMPLATES-->
-    
+
     <!--TEMPLATES END-->
 
 
@@ -140,7 +153,8 @@
     -->
 
     <!--SCRIPTS-->
-    <script src="/nlc_attendance/min/production.min.js"></script>
+    <script src="/js/logoutTimer.js"></script>
+    <script src="/js/preventMultiSubmit.js"></script>
     <!--SCRIPTS END-->
 
     <% if (typeof session.role !== "undefined" && session.role === "student") { %>
