--- a/views/pages/authentication/loginForm.html
+++ b/views/pages/authentication/loginForm.html
@@ -1,22 +1,15 @@
 <div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black"
     style="width:30%">
-    <form method="POST" action="<%= baseUrl %>/login">
-        <h1>Davis &amp; Elkins College</h1>
-        <h2>Naylor Learning Center</h2>
-
+        </div>   <form method="POST" action="<%= baseUrl %>/login">
         <div class="w3-margin">
-            <div>
-                <input name="username" class="w3-input w3-border" placeholder="Username" autofocus type="text"
-                    required />
-            </div>
-
-            <div>
-                <input name="password" class="w3-input w3-border" placeholder="Password" type="password" required />
-            </div>
-
-            <div class="button w3-padding-16">
-                <button class="w3-btn w3-white" type="submit">Login</button>
-            </div>
+        <div>
+            <input type="text" class="form-control" placeholder="Username" autofocus name="username" required />
         </div>
+        <div>
+            <input type="password" class="form-control" placeholder="Password" name="password" required/>
+        </div>
+        <button type="submit" class="btn btn-outline-dark">Submit</button>
+    </form>
+</div>
     </form>
 </div>
