--- a/views/pages/authentication/loginForm.html
+++ b/views/pages/authentication/loginForm.html
@@ -3,10 +3,10 @@
         </div>   <form method="POST" action="<%= baseUrl %>/login">
         <div class="w3-margin">
         <div>
-            <input type="text" class="form-control" placeholder="Username" autofocus name="username" required />
+            <input type="text" class="form-control-lg" placeholder="Username" autofocus name="username" required />
         </div>
         <div>
-            <input type="password" class="form-control" placeholder="Password" name="password" required/>
+            <input type="password" class="form-control-lg" placeholder="Password" name="password" required/>
         </div>
         <button type="submit" class="btn btn-outline-dark">Submit</button>
     </form>
