--- a/views/pages/authentication/loginForm.html
+++ b/views/pages/authentication/loginForm.html
@@ -1,5 +1,13 @@
+<!--STYLES-->
+<link rel="stylesheet" href="/styles/de.css">
+<!--STYLES END-->
+
 <div class="w3-row w3-container w3-display-middle w3-center w3-border w3-red w3-round w3-border-black"
     style="width:30%">
+<div class="container p-3 my-3 border de-colors">
+  <h1>Davis &amp; Elkins College</h1>
+  <h2>Naylor Learning Center</h2>
+</div>
         </div>   <form method="POST" action="<%= baseUrl %>/login">
         <div class="w3-margin">
         <div>
